<resources>

    <string name="app_name">Assignment Chapter 4 Android</string>

    <!--    Network Selection Activity  -->
    <string name="network_selection_title">Choose Implementation</string>
    <string name="network_btn_url_connection">URL Connection</string>
    <string name="network_btn_retrofit_manual">Retrofit + Manual</string>
    <string name="network_btn_retrofit_gson">Retrofit + Gson</string>

    <!--    Login Activity  -->
    <string name="login_title">Login</string>
    <string name="login_user_name_hint">User Name</string>
    <string name="login_password_hint">Password</string>

    <!--    User List Activity  -->
    <string name="user_list_add_user_content_description">Add User</string>

    <!--    User Item   -->
    <string name="item_user_full_name">"%1$s %2$s"</string>


    <!--    Add User Activity   -->
    <string name="add_user_first_name_hint">First Name</string>
    <string name="add_user_last_name_hint">Last Name</string>
    <string name="add_user_email_hint">Email</string>
    <string name="add_user_user_name_hint">User Name</string>
    <string name="add_user_image_url_hint">Avatar Image Link</string>
    <string name="add_user_btn_cancel">Cancel</string>
    <string name="add_user_btn_add">Add User</string>

    <!--    User Details Activity   -->
    <string name="user_details_user_name">User Name:</string>
    <string name="user_details_email">Email Address:</string>
    <string name="user_details_id">User Id:</string>
</resources>